{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 18,
  "lineage": "f2362224-983f-b413-f53f-c7230fc14ba4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "tf_default_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0e8a2b4e54406fc56",
            "id": "rtb-0e8a2b4e54406fc56",
            "owner_id": "977176859364",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "Private_Route_Table"
            },
            "vpc_id": "vpc-0287bdfed6b0b7f7a"
          },
          "depends_on": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0fecb0ec0341f4847",
            "owner_id": "977176859364",
            "tags": {
              "Name": "terraform_igw"
            },
            "vpc_id": "vpc-0287bdfed6b0b7f7a"
          },
          "depends_on": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-000e34dd3dd000c25",
            "owner_id": "977176859364",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fecb0ec0341f4847",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Route_Table"
            },
            "vpc_id": "vpc-0287bdfed6b0b7f7a"
          },
          "depends_on": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_route_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e8a2fd66bb845a4",
            "route_table_id": "rtb-000e34dd3dd000c25",
            "subnet_id": "subnet-038d60eece18b0c6e"
          },
          "depends_on": [
            "aws_route_table.tf_public_route",
            "aws_subnet.tf_public_subnet1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05430fb6fdf35f3f5",
            "route_table_id": "rtb-000e34dd3dd000c25",
            "subnet_id": "subnet-03eba8a70fa48e123"
          },
          "depends_on": [
            "aws_route_table.tf_public_route",
            "aws_subnet.tf_public_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet1",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977176859364:subnet/subnet-038d60eece18b0c6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.123.1.0/24",
            "id": "subnet-038d60eece18b0c6e",
            "map_public_ip_on_launch": true,
            "owner_id": "977176859364",
            "tags": {
              "Name": "Public_subnet 1"
            },
            "vpc_id": "vpc-0287bdfed6b0b7f7a"
          },
          "depends_on": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.dt_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977176859364:subnet/subnet-03eba8a70fa48e123",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.123.2.0/24",
            "id": "subnet-03eba8a70fa48e123",
            "map_public_ip_on_launch": true,
            "owner_id": "977176859364",
            "tags": {
              "Name": "Public_subnet 2"
            },
            "vpc_id": "vpc-0287bdfed6b0b7f7a"
          },
          "depends_on": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.dt_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977176859364:vpc/vpc-0287bdfed6b0b7f7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-01a98d6dcb002ddd1",
            "default_route_table_id": "rtb-0e8a2b4e54406fc56",
            "default_security_group_id": "sg-02ef8efdcb744f37d",
            "dhcp_options_id": "dopt-bd8ba1c6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0287bdfed6b0b7f7a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e8a2b4e54406fc56",
            "owner_id": "977176859364",
            "tags": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}